--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,5 +14,5 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "index.html"
+          source: "./index.html"
           target: "/var/www/html/sourav/"
