--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,3 +21,11 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+
+      - uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          port: 22
+          source: "./index.html"
+          target: "./var/www/html/"
