--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,6 +26,6 @@ jobs:
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
-          port: 22
+          key: ${{ secrets.EC2_SSH_KEY }}
           source: "./index.html"
           target: "./var/www/html/"
