--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,5 +18,6 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ubuntu
         key: ${{ secrets.EC2_SSH_KEY }}
+        port: 22
         source: "./index.html"
         target: "/var/www/html/"
