--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,6 +26,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{secrets.EC2_HOST}}
+          port: '22'
           username: ubuntu
           key: ${{secrets.EC2_SSH_KEY}}
           source: "build/"
