--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -8,19 +8,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+      # - name: Setup Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
 
-      - name: Build React App
-        run: npm run build
+      # - name: Build React App
+      #   run: npm run build
 
       - name: Deploy via SCP
         uses: appleboy/scp-action@v0.1.3
@@ -29,5 +29,5 @@ jobs:
           port: '22'
           username: ubuntu
           key: ${{secrets.EC2_SSH_KEY}}
-          source: "build/"
+          source: "README.md"
           target: "/var/www/html"
