--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,7 +23,7 @@ jobs:
       #   run: npm run build
 
       - name: Deploy via SCP
-        uses: appleboy/scp-action@v0.1.3
+        uses: appleboy/scp-action@master
         with:
           host: ${{secrets.EC2_HOST}}
           port: '22'
