--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -8,26 +8,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '18'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      # - name: Build React App
-      #   run: npm run build
+      - name: Build React App
+        run: npm run build
 
       - name: Deploy via SCP
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@latest
         with:
           host: ${{secrets.EC2_HOST}}
           port: '22'
           username: ubuntu
           key: ${{secrets.EC2_SSH_KEY}}
-          source: "README.md"
+          source: "build/"
           target: "/var/www/html"
