--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,11 +23,11 @@ jobs:
         run: npm run build
 
       - name: Deploy via SCP
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v1
         with:
           host: ${{secrets.EC2_HOST}}
           port: '22'
-          username: ubuntu
+          username: 'ubuntu'
           key: ${{secrets.EC2_SSH_KEY}}
           source: "build/"
           target: "/var/www/html"
