--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,13 +22,12 @@ jobs:
       - name: Build React App
         run: npm run build
 
-      - name: Deploy via SCP
-        uses: appleboy/ssh-action@v1
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: 'ubuntu'
           key: ${{ secrets.EC2_SSH_KEY }}
           port: '22'
-          script: 'whoami'
           source: "build/"
           target: "/var/www/html"
