--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Build React App
         run: npm run build
 
-      - name: Copy folder content recursively to remote
-        uses: garygrossgarten/github-action-scp@release
-        with:
-          local: "build/"
-          remote:  "/var/www/html"
-          host: ${{ secrets.EC2_HOST }}
-          username:  'ubuntu'
-          key: ${{ secrets.EC2_SSH_KEY }}
+      - name: Deploy to EC2
+        uses: easingthemes/ssh-deploy@v1
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_USER: 'ubuntu'
+          TARGET: '/var/www/html'
+          SOURCE: 'build/'
