--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to EC2
-        uses: easingthemes/ssh-deploy@v1
+        uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
