--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,6 +27,6 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
-          REMOTE_USER: 'ubuntu'
+          REMOTE_USER: 'root'
           TARGET: '/var/www/html'
           SOURCE: 'build/'
